Added the 2015 Cowboy Festival

--- a/Event_Pages/cowboyfest.html
+++ b/Event_Pages/cowboyfest.html
@@ -9,74 +9,75 @@
       wow calendar, powwow calendar, powwows , pow wows , indians ,
       dancing, singing, music, crafts, beadwork, drums, drummers, arts">
     <link rel="stylesheet" type="text/css" href="../theme/WSH.css">
-	<link rel="shortcut icon" href="../images/fohp.ico" />
+    <link rel="stylesheet" href="../css/lightbox.css">
+	<link rel="shortcut icon" href="../images/fohp.ico">
     <title>Friends of Hart Park and Museum</title>
-    <link rel="stylesheet" href="../carousel/css/feature-carousel.css" charset="utf-8" />
-    <script src="../carousel/js/jquery-1.7.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../carousel/js/jquery.featureCarousel.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript">
-      $(document).ready(function() {
-        var carousel = $("#carousel").featureCarousel({
-          // include options like this:
-          // (use quotes only for string values, and no trailing comma after last option)
-          // option: value,
-          // option: value
-		  largeFeatureWidth: 1
-        });
-
-        $("#but_prev").click(function () {
-          carousel.prev();
-        });
-        $("#but_pause").click(function () {
-          carousel.pause();
-        });
-        $("#but_start").click(function () {
-          carousel.start();
-        });
-        $("#but_next").click(function () {
-          carousel.next();
-        });
-      });
-    </script>
+    <script type="text/javascript" src="../js/prototype.js"></script>
+    <script type="text/javascript" src="../js/scriptaculous.js?load=effects,builder"></script>
+    <script type="text/javascript" src="../js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="../js/lightbox.js"></script>
     <script language="JavaScript" type="text/JavaScript">
-		function MM_preloadImages() { //v3.0
-		  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-			var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-			if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-		}
+<!--
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
 
-		function MM_swapImgRestore() { //v3.0
-		  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-		}
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
 
-		function MM_findObj(n, d) { //v4.01
-		  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-			d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-		  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-		  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
-		  if(!x && d.getElementById) x=d.getElementById(n); return x;
-		}
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+    <title>Friends of Hart Park and Museum</title>
+    <script language="JavaScript" type="text/JavaScript">
+<!--
+function MM_preloadImages() { //v3.0
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+}
 
-		function MM_swapImage() { //v3.0
-		  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-		   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-		}
-	</script>
+function MM_swapImgRestore() { //v3.0
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+
+function MM_swapImage() { //v3.0
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+}
+//-->
+</script>
     <script type="text/javascript">
-	  var _gaq = _gaq || [];
-	  _gaq.push(['_setAccount', 'UA-20562630-1']);
-	  _gaq.push(['_setDomainName', 'none']);
-	  _gaq.push(['_setAllowLinker', true]);
-	  _gaq.push(['_trackPageview']);
 
-	  (function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	  })();
-	</script>
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-20562630-1']);
+  _gaq.push(['_setDomainName', 'none']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
-
   <body
 onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images/nav/fiesta_B.gif','images/nav/fiesta_R.gif','images/nav/hall_B.gif','images/nav/hall_R.gif','images/nav/man_B.gif','images/nav/man_R.gif','images/nav/mbr_B.gif','images/nav/mbr_R.gif','images/nav/out_B.gif','images/nav/out_R.gif','images/nav/post_B.gif','images/nav/post_R.gif','images/nav/pow_B.gif','images/nav/pow_R.gif','images/nav/silents_B.gif','images/nav/silents_R.gif','../images/nav/film_B.gif','../images/nav/film_R.gif')"
     style="background-color: rgb(32, 32, 25); background-image:
@@ -85,13 +86,16 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
       cellspacing="0" width="996">
       <tbody>
         <tr>
-          <td background="../images/topBar_L.gif"> <table border="0" cellpadding="0" cellspacing="0">
+          <td background="../images/topBar_L.gif">
+            <table border="0" cellpadding="0" cellspacing="0">
               <tbody>
                 <tr>
                   <td width="50">&nbsp;</td>
                   <td width="896">
                     <div class="TTL" align="center">
-                      <p style="margin-top: 0"><font color="#800000">2014
+                      <p style="margin-top: 0"><font color="#800000">2015
+
+
                           Santa Clarita Cowboy Festival</font></p>
                     </div>
                   </td>
@@ -173,8 +177,7 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
             </table>
           </td>
         </tr>
-        <tr>
-          <td background="../images/midBar_L.gif"> <img
+        <tr> <td background="../images/midBar_L.gif"> <img
               src="../images/spacer.gif" border="0" height="20"
               width="2"> </td>
         </tr>
@@ -187,135 +190,56 @@ onload="MM_preloadImages('images/nav/bDay_B.gif','images/nav/bDay_R.gif','images
                       border="0" height="385" width="2"> </td>
                   <td valign="top" width="876">
                     <hr>
-<div class="cowboyfest">
-
-<header class="cowboyfest">
-This year, the Hart will feature more Cowboy Festival activities than ever before!  Be sure and join us by going to <a href="http://cowboyfestival.org" target="_blank">CowboyFestival.org</a> and getting your tickets pronto!  These events sell out!
-</header>
-    <div class="carousel-container" id="cowboyfest">
-    
-      <div id="carousel">
-        <div class="carousel-feature">
-          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/WyattAndTerryEarp.jpg"></a>
-          <div class="carousel-caption">
-            <p>
-			Terry &amp; Wyatt Earp
-            </p>
-            <p class="markcowboyfest">
-			Thursday evening
-            </p>
-          </div>
-        </div>
-        <div class="carousel-feature">
-          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/EJandKimi.jpg"></a>
-          <div class="carousel-caption">
-            <p>
-			Kim and E.J. Stephens
-            </p>
-            <p class="markcowboyfest">
-			Friday morning
-            </p>
-          </div>
-        </div>
-        <div class="carousel-feature">
-          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/walkingTour.jpg"></a>
-          <div class="carousel-caption">
-            <p>
-			Walk of Western Stars and Hart Park walking tours
-            </p>
-            <p class="markcowboyfest">
-			Friday morning
-            </p>
-          </div>
-        </div>
-        <div class="carousel-feature">
-          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/Rogers.jpg"></a>
-          <div class="carousel-caption">
-            <p>
-			Cheryl Rogers Barnett
-            </p>
-            <p class="markcowboyfest">
-			Friday evening
-            </p>
-          </div>
-        </div>
-        <div class="carousel-feature">
-          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/LeonardMaltin.jpg"></a>
-          <div class="carousel-caption">
-            <p>
-			Leonard Maltin
-            </p>
-            <p class="markcowboyfest">
-			Friday evening
-            </p>
-          </div>
-        </div>
-        <div class="carousel-feature">
-          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/BelindaGail.jpg"></a>
-          <div class="carousel-caption">
-            <p>
-			Belinda Gail
-            </p>
-            <p class="markcowboyfest">
-			Saturday evening
-            </p>
-          </div>
-        </div>
-        <div class="carousel-feature">
-          <a href="#"><img class="carousel-image" alt="Image Caption" src="cowboyfest2014/JonChandler.jpg"></a>
-          <div class="carousel-caption">
-            <p>
-			Jon Chandler
-            </p>
-            <p class="markcowboyfest">
-			Saturday evening
-            </p>
-          </div>
-        </div>
-      </div>
-    
-      <div id="carousel-left"><img src="../carousel/images/arrow-left.png" /></div>
-      <div id="carousel-right"><img src="../carousel/images/arrow-right.png" /></div>
-    </div>
-<h1 class="cowboyfest">
-Thursday, April 24<sup>th</sup>
-</h1>
-<h2 class="cowboyfest">Evening: Mr. and Mrs. Wyatt Earp play</h2>
-<p class="cowboyfest">
-Meet and enjoy the real life Earp relatives as they perform their highly acclaimed, award winning play based on the true life stories of what happened in Tombstone and Wyatt and Josie&rsquo;s volatile relationship. Enjoy this amazing opportunity in the former living room of local cowboy/actor William S. Hart.
-</p>
-<h1 class="cowboyfest">
-Friday, April 25<sup>th</sup>
-</h1>
-<h2 class="cowboyfest">Morning: Walk of Western Star and William S. Hart museum and grounds Walking Tour</h2>
-<p class="cowboyfest">
-Start out in Hart Hall on the grounds of William S. Hart Park for a guided tour of old town Newhall&rsquo;s <em>Walk of Western Stars</em>.  Your guides will be author, film historian and <i>SCV In The Movies</i> co-host E.J. Stephens along with his wife, author Kim Stephens.  Following that, enjoy an extensive tour of the grounds of William S. Hart&rsquo;s property, incuding his mansion, the ranch house where he lived before the mansion was built, and the surrounding grounds.  Top off the experience with lunch and a classic William S. Hart movie!
-
-</p>
-<h2 class="cowboyfest">Evening:  "Growing Up With Roy Rogers And Dale Evans&ldquo;</h2>
-<p class="cowboyfest">
-What a chance to get the inside scoop on Cowboy Hero Roy Rogers and his wife Dale Evans, by none other than their daughter, Cheryl Rogers Barnett!  Cheryl will be interviewed by legendary Hollywood historian and author, Mr. Leonard Maltin!  And of course, there will be time for Q&amp;A from the crowd!  As if that weren&rsquo;t enough, it all takes place in the living room of an earlier Cowboy Hero, William S. Hart.
-
-</p>
-<h1 class="cowboyfest">
-Saturday, April 26<sup>th</sup>
-</h1>
-<h2 class="cowboyfest">Evening:  Belinda Gail &amp; Jon Chandler, Alone &amp; Together</h2>
-<p class="cowboyfest">
-Belinda Gail, &ldquo;America&rsquo;s Western Sweetheart&rdquo;, will perform live in William S. Hart&rsquo;s living room, surrounded by Hart&rsquo;s collection of art and artifacts.  Ms. Gail is a top female Western Music performer, and was recently listed as one of the top 50 Country and Western Entertainers of all time by <i>American Cowboy Magazine</i>.
-</p>
-<p class="cowboyfest">
-As if that weren&rsquo;t enough, on the same bill we&rsquo;re proud to present, for the first time in the mansion, Jon Chandler, the &ldquo;Voice of the Colorado Rockies&rdquo;, who himself is widely regarded as one of the country&lsquo;s best western singer/songwriters. <p>
-</p>
-<p class="cowboyfest">
-We are all keeping our fingers crossed that these two icons of different aspects of country music will play some tunes together, for an evening that will be long remembered!
-
-</p>
-<footer class="cowboyfest">
-Please mosey on over to the <a href="http://cowboyfestival.org" target="_blank">Cowboy Festival Website</a> to get your tickets soon!
-</footer>
+<div id="titleside">
+<h2>The 2015 Santa Clarita Cowboy Festival will be in William S. Hart&rsquo;s Park!</h2>
 </div>
-</hr>
+<!--------------------------------------------------------------------------------------- -->
+<div id="topside">
+<h3>It&rsquo;s that time of year again!</h3>
+<p>Time to wake up and smell the grits! Time to trade in our business casual for chaps, our hardhats for Stetsons, and ride into town on a paint instead of a Pontiac.</p>
+<p>That&rsquo;s because, saddle-pals, once again here comes the Santa Clarita Cowboy Festival! And this year, Friends, Hart Park will be at the &ldquo;Hart&rdquo; of the action!</p>
+<h3 style="display: inline;">The Friends of Hart Park is especially proud to host two very special nights of entertainment, in the William S. Hart's living room up at the mansion.
+Seating is limited, so get your tickets to the fun right <a href="http://www.cowboyfestival.org/tickets" target="_blank">HERE</a></h3>
+<small style="display: inline;"> (Opens a new window) </small>
+<h3 style="display: inline;">or click below for further details.</h3>
+</div>
+<!--------------------------------------------------------------------------------------- -->
+<div id="leftside">
+<p>Friday, Apr. 17<sup>th</sup> at 8pm for $45</p>
+<a href="http://cowboyfestival.org/an-evening-with-cow-bop-at-william-s-hart-mansion/" target="_blank">
+<h2>Cow Bop At The Hart</h2>
+<img src="cowboyfest2015/cowbop.png" />
+</a>
+<p>Western Swing at its best rolls into Cowboy Movie Star William S. Hart&rsquo;s Historic Mansion for a special, one-night only, intimate, living room concert.</p>
+<p>Fresh from their 2014 induction into the Western Swing Hall of Fame, this award-winning group has had audiences tappin&rsquo; toes from Texas to New Zealand for more than 12 years. 
+Carnegie Hall was a highlight for the band.</p>
+<p>With their unique blend of Be Bop, Western Swing, Blues, Big Band and Honky Tonk, vocalist Pinto Pammy, guitarist Bruce Forman and the band bring a fresh, original approach to songs that are sure to please everyone.</p>
+<p>Their music is served hot and jazzy, so be ready to have a western swingin&rsquo; good time! &ldquo;It will be the most fun you can have with your spurs on&rdquo;<p>
+<p><em>This is their ONLY appearance at the Festival this year!</em></p>
+</div>
+<!--------------------------------------------------------------------------------------- -->
+<div id="rightside">
+<p>Saturday, Apr. 18<sup>th</sup> at 8pm for $40</p>
+<a href="http://cowboyfestival.org/an-evening-with-buffalo-bill-at-william-s-hart-mansion/" target="_blank">
+<h2>An Evening with Buffalo Bill</h2>
+<img src="cowboyfest2015/buffalobill.png" />
+</a>
+<p>Step back into the old west as historical consultant, actor and author Peter Sherayko performs what has been called 
+&ldquo;One of the best Buffalo Bill shows in production today&rdquo;.</p>
+<p>Much like the real showman, Peter has thrilled audiences all over the world with his one-man show. 
+He embodies this western icon, telling of his life struggles and hardships, along with colorful tales of Wild Bill Hickok, Geronimo, Annie Oakley and others.</p>
+<p>And what better way to experience Buffalo Bill than in real life Cowboy Movie Star William S. Hart&rsquo;s own living room, surrounded by his Remingtons and Russells. An intimate evening of nostalgia, humor and history.
+<p><em>EXCLUSIVE - One Night Only!</em></p>
+</div>
+<!--------------------------------------------------------------------------------------- -->
+<div id="footside">
+<h3>Remember, seating is limited, so get your tickets 
+<a href="http://www.cowboyfestival.org/tickets" target="_blank">HERE.</a></h3>
+<p>The 2015 Santa Clarita Cowboy Festival will take place this year between April 15<sup>th</sup> and 19<sup>th</sup>. Unlike previous years, the festival will make downtown Newhall its home. And when we say &ldquo;downtown Newhall,&rdquo; we really mean the William S. Hart Park!</p>
+<a href="http://www.cowboyfestival.org/tickets" target="_blank">
+<img src="cowboyfest2015/newlocation.png" />
+</a>
+</div>
                   </td>
                   <td width="60"> &nbsp; </td>
                 </tr>
