--- a/index.html
+++ b/index.html
@@ -202,24 +202,8 @@ src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.
                                 </tr>
                                 <tr>
                                 <td>
-                                <h3>Click on the image below to read <u>The Signal</u> article on the </h3>
-                                <h2>Pacific Islander Festival</h2> <h3>at Hart Park</h3><br>
-<center><a href="http://www.signalscv.com/section/36/article/119604/" target="_blank">
-<img src="Event_Pages/images/pacific.jpg"/></a></center>
-</td>
-</tr>
-                                <tr>
-                                  <td style="vertical-align: top;">
-                                        <font color="#FFCC00" size="6">
-                                          <img
-                                            src="images/baseline_v2.gif"
-                                            border="0" height="24"
-                                            width="313"></font></b></i></td>
-                                </tr>
-                                <tr>
-                                <td>
-                                <h3>Click below for highlights of the</h3>
-                                <h2 align="center">2014 Cowboy Festival Hart Park Events!</h2>
+                                <h4>Click below for highlights of the</h4>
+                                <h3 align="center">2014 Cowboy Festival Hart Park Events!</h3>
                                 <center>
 <a href="Event_Pages/cowboyfest2014/LorenJanes.jpg" rel="lightbox[cowboyfest]" 
 title="Stuntman Loren Janes makes a surprise appearance at the Walk of Western Stars tour!">
@@ -232,6 +216,35 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
 <img src="Event_Pages/cowboyfest2014/thumbs/ChandlerAndGail.jpg"/></a>
                                 </center>
                                 </td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                            <h4>Navigate to our friends at SCVTV to see pictures from 
+                                            <a href="https://www.facebook.com/media/set/?set=a.704375942973798.1073741860.227475607330503&type=1" target="_blank">
+                                            2014's Hart of the West Native American Pow Wow!
+                                            </a></h4>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                        <font color="#FFCC00" size="6">
+                                          <img
+                                            src="images/baseline_v2.gif"
+                                            border="0" height="24"
+                                            width="313"></font></b></i></td>
+                                </tr>
+                                <tr>
+                                  <td style="vertical-align: top;">
+                                    <h4> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">here</a> for photos from Bill Hart's 150<sup>th</sup> birthday bash and a "HARTy" WELCOME to all our new members!!</h4>
+                                  </td>
                                 </tr>
                                 <tr>
                                   <td style="vertical-align: top;">
@@ -263,35 +276,38 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
                                 <h2>2015 Calendar of Events</h2>
-                                <h4>Stay tuned for Friends of Hart Park 2015 events as
-                                they become available!</h4><br>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate"></td>
-                                      <td id="Event"></td>
+                                      <td id="EventDate">Friday, Apr 17<sup>th</sup> at 8pm</td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/cowboyfest.html">
+                                      Cow Bop at the Hart
+                                      </a>
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Apr 18<sup>th</sup> at 8pm</td>
+                                      <td id="Event">
+                                      <a href="Event_Pages/cowboyfest.html">
+                                      Cody: An Evening with Buffalo Bill
+                                      </a>
+                                      </td>
                                     </tr>
                                   </tbody>
                                 </table>
-                                    <img src="images/HartValentine.png" />
+                                <h4>Stay tuned for more Friends of Hart Park 2015 events as
+                                they become available!</h4>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                    <h3> Click <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">here</a> for photos from Bill Hart's 150<sup>th</sup> birthday bash and a "HARTy" WELCOME to all our new members!!</h3>
-                                    <a target="_blank" href="https://www.facebook.com/media/set/?set=pcb.597304260399278&type=1">
-                                    <img src="Event_Pages/HappyBirthdayHart.jpg" />
+                                    <h3>This year, the Santa Clarita Cowboy Festival will be happening in Hart Park!
+                                    Click on the map to learn about the events the Friends of Hart Park will be putting on!</h3>
+                                    <a href="Event_Pages/cowboyfest.html">
+                                    <img src="Event_Pages/cowboyfest2015/newlocation-sm.png" />
                                     </a>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                            <h3>Navigate to our friends at SCVTV to see pictures from 
-                                            <a href="https://www.facebook.com/media/set/?set=a.704375942973798.1073741860.227475607330503&type=1" target="_blank">
-                                            2014's Hart of the West Native American Pow Wow!
-                                            </a></h3>
-                                            </a>
-</h2>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
@@ -305,9 +321,8 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                             <h3>
 And, if you missed the fun and would like to see the movie and a more in-depth interview with our special guest, Vola Vale's grandson Dennis McDougal by hosts E.J. Stephens and Bill West, go see the 
                                             <a href="http://scvtv.com/?p=18843" target="_blank">
-SCV In The Movies Episode!
+SCV In The Movies Episode!</a>
                                             </h3>
-</h2>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
