Update roster on web page. Fill in 2015 dates on web page.

--- a/The_Friends/directors.html
+++ b/The_Friends/directors.html
@@ -216,7 +216,7 @@ onload="MM_preloadImages('../images/nav/zoo_B.gif','../images/nav/zoo_R.gif','..
                             <td align="left">Director</td>
                             <td align="left"><br>
                             </td>
-                            <td id="BOLD" align="left">John Boston</td>
+                            <td id="BOLD" align="left">Gladys Farrell</td>
                             <td align="left">Associate Director</td>
                           </tr>
                           <tr>
