--- a/index.html
+++ b/index.html
@@ -276,12 +276,14 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                             <div><i><b> </b></i>
                               <div style="text-align: center;">
                                 <h2>2015 Calendar of Events</h2>
+                                <h3>Click on links as details become available</h3>
+                                <h4>(later dates subject to change)</h4>
                                 <table style="text-align: left; width:
                                   100%;" border="0" cellpadding="4"
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Friday, Apr 17<sup>th</sup> at 8pm</td>
+                                      <td id="EventDate">Friday, Apr. 17<sup>th</sup> at 8pm</td>
                                       <td id="Event">
                                       <a href="Event_Pages/cowboyfest.html">
                                       Cow Bop at the Hart
@@ -289,17 +291,45 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Apr 18<sup>th</sup> at 8pm</td>
+                                      <td id="EventDate">Saturday, Apr. 18<sup>th</sup> at 8pm</td>
                                       <td id="Event">
                                       <a href="Event_Pages/cowboyfest.html">
                                       Cody: An Evening with Buffalo Bill
                                       </a>
                                       </td>
                                     </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, May 9<sup>th</sup></td>
+                                      <td id="Event">
+                                      Pacific Islander Festival
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Aug. 8<sup>th</sup></td>
+                                      <td id="Event">
+                                      Silents Under the Stars
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Sep. 26<sup>th</sup></td>
+                                      <td id="Event">
+                                      Native American Pow Wow
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Sunday, Oct. 11<sup>th</sup></td>
+                                      <td id="Event">
+                                      Bow Wows &amp; Meows Pet Fair
+                                      </td>
+                                    </tr>
+                                    <tr>
+                                      <td id="EventDate">Saturday, Nov. 7<sup>th</sup></td>
+                                      <td id="Event">
+                                      Wild West Rose Show
+                                      </td>
+                                    </tr>
                                   </tbody>
                                 </table>
-                                <h4>Stay tuned for more Friends of Hart Park 2015 events as
-                                they become available!</h4>
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
