--- a/index.htm
+++ b/index.htm
@@ -311,7 +311,7 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td id="EventDate">Saturday, Sep. 26<sup>th</sup></td>
+                                      <td id="EventDate">Saturday &amp; Sunday, Sep. 26<sup>th</sup> &amp; 27<sup>th</sup></td>
                                       <td id="Event">
                                       Native American Pow Wow
                                       </td>
