--- a/index.html
+++ b/index.html
@@ -283,25 +283,11 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Friday, Apr. 17<sup>th</sup> at 8pm</td>
+                                      <td id="EventDate">Saturday, May 9<sup>th</sup> 10am&mdash;8pm</td>
                                       <td id="Event">
-                                      <a href="Event_Pages/cowboyfest.html">
-                                      Cow Bop at the Hart
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Saturday, Apr. 18<sup>th</sup> at 8pm</td>
-                                      <td id="Event">
-                                      <a href="Event_Pages/cowboyfest.html">
-                                      Cody: An Evening with Buffalo Bill
-                                      </a>
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td id="EventDate">Saturday, May 9<sup>th</sup></td>
-                                      <td id="Event">
+<a href="Event_Pages/pacific2015.jpg" rel="lightbox[pacific]">
                                       Pacific Islander Festival
+</a>
                                       </td>
                                     </tr>
                                     <tr>
@@ -333,29 +319,15 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                    <h3>This year, the Santa Clarita Cowboy Festival will be happening in Hart Park!
-                                    Click on the map to learn about the events the Friends of Hart Park will be putting on!</h3>
-                                    <a href="Event_Pages/cowboyfest.html">
-                                    <img src="Event_Pages/cowboyfest2015/newlocation-sm.png" />
-                                    </a>
+                                    <h3>Aloha!  Come to the 2015 Santa Clarita Valley Pacific Isander Festival at Hart Park!</h3>
+<a href="Event_Pages/pacific2015.jpg" rel="lightbox[pacific2]">
+<img src="Event_Pages/pacific2015-sm.jpg" />
+</a>
+<!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                            <h3>Go to our 
-                                            <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
-                                            Facebook page</a>
-                                            to see pictures from 2014's Silents Under the Stars!</h3>
-                                            <a href="https://www.facebook.com/media/set/?set=a.733883636676582.1073741829.171859949545623" target="_blank">
-                                            <img src="Event_Pages/silents/silents2014/panorama-sm.jpg"/><br>
-                                            </a>
-                                            <h3>
-And, if you missed the fun and would like to see the movie and a more in-depth interview with our special guest, Vola Vale's grandson Dennis McDougal by hosts E.J. Stephens and Bill West, go see the 
-                                            <a href="http://scvtv.com/?p=18843" target="_blank">
-SCV In The Movies Episode!</a>
-                                            </h3>
-                                    <p style="margin-top: 7px;
-                                      margin-bottom: 5px" align="center">
-<img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
+-->
                         </tr>
                       </tbody>
                     </table>
