--- a/index.html
+++ b/index.html
@@ -283,11 +283,12 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                   cellspacing="5">
                                   <tbody>
                                     <tr>
-                                      <td id="EventDate">Saturday, May 9<sup>th</sup> 10am&mdash;8pm</td>
+                                      <td id="EventDate">Saturday, June 20<sup>th</sup> 9am&mdash;4pm</td>
                                       <td id="Event">
-<a href="Event_Pages/pacific2015.jpg" rel="lightbox[pacific]">
-                                      Pacific Islander Festival
-</a>
+                                      Peoples Fest 2015
+                                      </td>
+                                      <td id="EventDetail">
+                                      See details below.
                                       </td>
                                     </tr>
                                     <tr>
@@ -319,10 +320,19 @@ title="Film Historian Leonard Maltin interviews Roy and Dale's daughter, Cheryl 
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
 <img src="images/baseline_v2.gif" border="0" height="24" width="546"></p>
-                                    <h3>Aloha!  Come to the 2015 Santa Clarita Valley Pacific Isander Festival at Hart Park!</h3>
-<a href="Event_Pages/pacific2015.jpg" rel="lightbox[pacific2]">
-<img src="Event_Pages/pacific2015-sm.jpg" />
-</a>
+                                     The Friends of Hart Park in cooperation with The County of 
+                                     Los Angeles Department of Parks and Recreation at Hart Park
+                                     is pleased to present
+                                    <h2>Peoples Fest 2015</h2>
+                                    <img src="images/peoples.jpg" />
+                                    <h3>Saturday, June 20<sup>th</sup> 9am-4pm</h3>
+                                    <p>Peoples Fest 2015 is a multi-cultural event, featuring ethnic and American 
+                                    Foods, music performers, dances and arts &amp; crafts. Present will be 
+                                    health and welfare information services.</p>
+                                    <p>There will be arts &amp; crafts vendors, food and snack vendors, 
+                                    amateur and professional performers. There will be a talent show which 
+                                    encourages kids to donate their talents to the Peoples Fest stage.</p>
+                                    <p>Admission to this event is free to the public.</p>
 <!--
                                     <p style="margin-top: 7px;
                                       margin-bottom: 5px" align="center">
